--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "uglify-js": ">= 1.1.1",
     "optimist": ">= 0.2.8",
     "async": ">= 0.1.9",
-    "traverse": ">= 0.5.2"
+    "ncp": ">= 0.2.1"
   },
   "devDependencies": {},
   "bin": {
