added description to report

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "optimist": ">= 0.2.8",
     "async": ">= 0.1.9",
     "ncp": ">= 0.2.1",
-    "pegjs": ">= 0.6.2"
+    "pegjs": ">= 0.6.2",
+    "handlebars": ">= 1.0.2"
   },
   "devDependencies": {},
   "bin": {
