--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "async": ">= 0.1.9",
     "ncp": ">= 0.2.1",
     "pegjs": ">= 0.6.2",
-    "handlebars": ">= 1.0.2"
+    "handlebars": "~ 1.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tap": ">=0.1.0",
+    "tapr": ">=0.1.0"
+  },
   "bin": {
     "doctor": "bin/doctor"
   }
