--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "async": ">= 0.1.9",
     "ncp": ">= 0.2.1",
     "pegjs": ">= 0.6.2",
-    "handlebars": "~ 1.0.2"
+    "handlebars": ">= 1.0.0"
   },
   "devDependencies": {
     "tap": ">=0.1.0",
