--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pegjs": ">= 0.6.2",
     "handlebars": ">= 1.0.0",
     "github-flavored-markdown": ">= 1.0.0",
-    "underscore": ">= 1.2.2"
+    "underscore": ">= 1.2.2",
+    "mkdirp": ">= 0.2.1"
   },
   "devDependencies": {
     "tap": ">=0.1.0",
