--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "github-flavored-markdown": ">= 1.0.0",
     "underscore": ">= 1.2.2",
     "mkdirp": ">= 0.2.1",
-    "showdown": ">= 0.0.1"
+    "showdown": ">= 0.0.1",
+    "js-yaml": ">= 0.3.5"
   },
   "devDependencies": {
     "mocha": ">=0.12.1",
