hopefully solved travis weirdness

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "optimist": ">= 0.2.8",
     "async": ">= 0.1.9",
     "ncp": "= 0.2.2",
-    "pegjs": ">= 0.6.2",
+    "pegjs": "= 0.6.2",
     "handlebars": ">= 1.0.0",
     "github-flavored-markdown": ">= 1.0.0",
     "underscore": ">= 1.2.2",
