--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Justin Deal",
   "name": "doctor",
   "description": "Create documentation from a JavaScript AST.",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "homepage": "https://github.com/jdeal/doctor",
   "repository": {
     "type": "git",
@@ -13,16 +13,16 @@
     "node": ">= 0.4.12"
   },
   "dependencies": {
-    "optimist": ">= 0.2.8",
-    "async": ">= 0.1.9",
-    "ncp": "= 0.2.2",
-    "pegjs": "= 0.6.2",
-    "handlebars": ">= 1.0.0",
-    "github-flavored-markdown": ">= 1.0.0",
-    "underscore": ">= 1.2.2",
-    "mkdirp": ">= 0.2.1",
-    "showdown": ">= 0.0.1",
-    "js-yaml": ">= 0.3.5"
+    "optimist": "~0.3.1",
+    "async": "~0.1.9",
+    "ncp": "=0.2.2",
+    "pegjs": "=0.6.2",
+    "handlebars": "~1.0.0",
+    "github-flavored-markdown": "~1.0.0",
+    "underscore": "~1.2.2",
+    "mkdirp": "~0.2.1",
+    "showdown": "~0.0.1",
+    "js-yaml": "~0.3.5"
   },
   "devDependencies": {
     "mocha": ">=0.12.1",
