adding more documentation to doctor code

--- a/test/fixture/examine/__disabled__exports-require/report.yaml
+++ b/test/fixture/examine/__disabled__exports-require/report.yaml
@@ -3,6 +3,8 @@ items:
     type: group
     items:
     - modules
+    itemTypeCounts:
+      group: 1
   modules:
     type: group
     key: modules
@@ -10,6 +12,8 @@ items:
     items:
     - b
     - a
+    itemTypeCounts:
+      module: 2
   b:
     type: module
     key: b
