--- a/test/fixture/examine/requires/report.yaml
+++ b/test/fixture/examine/requires/report.yaml
@@ -3,13 +3,19 @@ items:
     type: group
     items:
     - modules
+    itemTypeCounts:
+      group: 1
   modules:
     type: group
     key: modules
     name: Modules
+    groups:
+    - root
     items:
     - b
     - a
+    itemTypeCounts:
+      module: 2
   b:
     type: module
     key: b
