--- a/test/fixture/examine/description-function/report.yaml
+++ b/test/fixture/examine/description-function/report.yaml
@@ -3,17 +3,19 @@ items:
     type: group
     items:
     - modules
-    - classes
+    isSorted: true
+    itemTypeCounts:
+      group: 1
   modules:
     type: group
     key: modules
     name: Modules
+    groups:
+    - root
     items:
     - source
-  classes:
-    type: group
-    key: classes
-    name: Classes
+    itemTypeCounts:
+      module: 1
   source:
     type: module
     key: source
@@ -22,9 +24,11 @@ items:
     - modules
     items:
     - source.foo
+    itemTypeCounts:
+      function: 1
   source.foo:
     type: function
-    constructorFunction: false
+    isConstructor: false
     key: source.foo
     params: []
     description: <p>function comment</p>
@@ -32,4 +36,3 @@ items:
     - source
     name: foo
     signatures: []
-    api: true
