--- a/test/fixture/examine/package/report.yaml
+++ b/test/fixture/examine/package/report.yaml
@@ -3,17 +3,19 @@ items:
     type: group
     items:
     - modules
-    - classes
+    itemTypeCounts:
+      group: 1
+    isSorted: true
   modules:
     type: group
     key: modules
     name: Modules
+    groups:
+    - root
     items:
     - foo
-  classes:
-    type: group
-    key: classes
-    name: Classes
+    itemTypeCounts:
+      module: 1
   foo:
     type: module
     key: foo
@@ -24,13 +26,14 @@ items:
       name: foop
     items:
     - foo.bar
+    itemTypeCounts:
+      function: 1
   foo.bar:
     type: function
-    constructorFunction: false
+    isConstructor: false
     key: foo.bar
     params: []
     groups:
     - foo
     name: bar
     signatures: []
-    api: true
