--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "ncp": "=0.2.2",
     "pegjs": "=0.6.2",
     "handlebars": "~1.0.0",
-    "github-flavored-markdown": "~1.0.0",
     "underscore": "~1.2.2",
     "mkdirp": "~0.2.1",
-    "showdown": "~0.0.1",
-    "js-yaml": "~0.3.5"
+    "js-yaml": "~0.3.5",
+    "marked": "~0.2.5"
   },
   "devDependencies": {
     "mocha": ">=0.12.1",
