--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Justin Deal",
   "name": "doctor",
   "description": "Create documentation from a JavaScript AST.",
-  "version": "0.1.29",
+  "version": "0.1.31",
   "homepage": "https://github.com/jdeal/doctor",
   "repository": {
     "type": "git",
@@ -20,12 +20,12 @@
     "handlebars": "~1.0.0",
     "underscore": "~1.2.2",
     "mkdirp": "~0.2.1",
-    "js-yaml": "~0.3.5",
     "marked": "~0.2.5"
   },
   "devDependencies": {
     "mocha": ">=0.12.1",
-    "chai": ">=0.3.3"
+    "chai": ">=0.3.3",
+    "js-yaml": "~0.3.5"
   },
   "bin": {
     "doctor": "bin/doctor"
