--- a/package.json
+++ b/package.json
@@ -9,24 +9,21 @@
     "url": "git://github.com/jdeal/doctor.git"
   },
   "main": "lib/doctor",
-  "engines": {
-    "node": ">= 0.4.12"
-  },
   "dependencies": {
-    "optimist": "~0.3.1",
-    "async": "~0.1.9",
+    "optimist": "=0.3.1",
+    "async": "=0.1.9",
     "ncp": "=0.2.6",
     "pegjs": "=0.6.2",
-    "handlebars": "~1.0.0",
-    "underscore": "~1.2.2",
-    "mkdirp": "~0.3.4",
-    "marked": "~0.2.5",
-    "fs-compare": "0.0.0"
+    "handlebars": "=1.0.0",
+    "underscore": "=1.2.2",
+    "mkdirp": "=0.3.4",
+    "marked": "=0.2.5",
+    "fs-compare": ">=0.0.0"
   },
   "devDependencies": {
-    "mocha": ">=0.12.1",
-    "chai": ">=0.3.3",
-    "js-yaml": "~0.3.5"
+    "mocha": "=0.12.1",
+    "chai": "=0.3.3",
+    "js-yaml": "=0.3.5"
   },
   "bin": {
     "doctor": "bin/doctor"
