--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "optimist": "=0.3.1",
     "async": "=0.1.9",
     "ncp": "=0.2.6",
-    "pegjs": "=0.6.2",
     "handlebars": "=1.0.0",
     "underscore": "=1.2.2",
     "mkdirp": "=0.3.4",
     "marked": "=0.2.5",
-    "fs-compare": ">=0.0.0"
+    "fs-compare": ">=0.0.0",
+    "quickpeg": ">=0.0.0"
   },
   "devDependencies": {
     "mocha": "=0.12.1",
