--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "main": "lib/doctor",
   "dependencies": {
-    "optimist": "=0.3.1",
-    "async": "=0.1.9",
+    "optimist": "~0.3.1",
+    "async": "~0.1.9",
     "ncp": "=0.2.6",
-    "handlebars": "=1.0.0",
-    "underscore": "=1.2.2",
+    "handlebars": "~1.0.0",
+    "underscore": "~1.2.2",
     "mkdirp": "=0.3.4",
     "marked": "=0.2.5",
-    "fs-compare": ">=0.0.0",
-    "quickpeg": ">=0.0.0"
+    "fs-compare": "=0.0.4",
+    "quickpeg": "=0.0.3"
   },
   "devDependencies": {
     "mocha": "=0.12.1",
